--- a/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
@@ -117,11 +117,47 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Address" xml:space="preserve">
+    <value>العنوان</value>
+  </data>
+  <data name="AddressRequiredErrorMessage" xml:space="preserve">
+    <value>الرجاء إدخال عنوانك.</value>
+  </data>
+  <data name="Area" xml:space="preserve">
+    <value>المنطقة</value>
+  </data>
+  <data name="AreaRequiredErrorMessage" xml:space="preserve">
+    <value>الرجاء إدخال المنطقة.</value>
+  </data>
+  <data name="Block" xml:space="preserve">
+    <value>القطعة</value>
+  </data>
+  <data name="BlockRequiredErrorMessage" xml:space="preserve">
+    <value>الرجاء إدخال رقم القطعة.</value>
+  </data>
+  <data name="Building" xml:space="preserve">
+    <value>المبنى</value>
+  </data>
+  <data name="BuildingRequiredErrorMessage" xml:space="preserve">
+    <value>الرجاء إدخال رقم المبنى.</value>
+  </data>
   <data name="ChangeLanguage" xml:space="preserve">
     <value>تغيير اللغة</value>
   </data>
+  <data name="City" xml:space="preserve">
+    <value>المدينة</value>
+  </data>
+  <data name="CityRequiredErrorMessage" xml:space="preserve">
+    <value>الرجاء إدخال مدينتك.</value>
+  </data>
   <data name="Continue" xml:space="preserve">
     <value>المتابعة</value>
+  </data>
+  <data name="Country" xml:space="preserve">
+    <value>البلد</value>
+  </data>
+  <data name="CountryRequiredErrorMessage" xml:space="preserve">
+    <value>الرجاء اختيار بلدك.</value>
   </data>
   <data name="Email" xml:space="preserve">
     <value>عنوان البريد الإلكتروني</value>
@@ -144,11 +180,17 @@
   <data name="InvalidUserNameOrPassword" xml:space="preserve">
     <value>عذراً، لكنّ كلمة المرور أو عنوان البريد الإلكتروني غير صحيح.</value>
   </data>
+  <data name="Jadda" xml:space="preserve">
+    <value>الجادة</value>
+  </data>
   <data name="LastName" xml:space="preserve">
     <value>اسم العائلة</value>
   </data>
   <data name="LastNameRequiredErrorMessage" xml:space="preserve">
     <value>الرجاء إدخال اسم عائلتك.</value>
+  </data>
+  <data name="Loading" xml:space="preserve">
+    <value>تحميل...</value>
   </data>
   <data name="MyAccount" xml:space="preserve">
     <value>حسابي</value>
@@ -165,6 +207,9 @@
   <data name="NewPassword" xml:space="preserve">
     <value>عملاء جدد</value>
   </data>
+  <data name="OptionLabel" xml:space="preserve">
+    <value>اختيار...</value>
+  </data>
   <data name="Password" xml:space="preserve">
     <value>كلمة المرور</value>
   </data>
@@ -173,6 +218,9 @@
   </data>
   <data name="PasswordSuccessfullyChanged" xml:space="preserve">
     <value>تم تغيير كلمة المرور بنجاح.</value>
+  </data>
+  <data name="PostalCode" xml:space="preserve">
+    <value>الرمز البريدي</value>
   </data>
   <data name="Register" xml:space="preserve">
     <value>التسجيل</value>
@@ -215,5 +263,26 @@
   </data>
   <data name="SignOut" xml:space="preserve">
     <value>تسجيل الخروج</value>
+  </data>
+  <data name="State" xml:space="preserve">
+    <value>الولاية</value>
+  </data>
+  <data name="StateOrProvince" xml:space="preserve">
+    <value>الولاية أو المحافظة</value>
+  </data>
+  <data name="StateRequiredErrorMessage" xml:space="preserve">
+    <value>الرجاء إدخال الولاية.</value>
+  </data>
+  <data name="Street" xml:space="preserve">
+    <value>رقم الشارع</value>
+  </data>
+  <data name="StreetRequiredErrorMessage" xml:space="preserve">
+    <value>الرجاء إدخال رقم الشارع.</value>
+  </data>
+  <data name="ZipCode" xml:space="preserve">
+    <value>رقم المنطقة البريدية</value>
+  </data>
+  <data name="ZipCodeRequiredErrorMessage" xml:space="preserve">
+    <value>الرجاء إدخال رقم المنطقة البريدية.</value>
   </data>
 </root>
