MZ-15 added jquery UI; added new email template; polished up registration form

--- a/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
@@ -279,6 +279,9 @@
   <data name="StreetRequiredErrorMessage" xml:space="preserve">
     <value>الرجاء إدخال رقم الشارع.</value>
   </data>
+  <data name="Welcome" xml:space="preserve">
+    <value>مرحبا!</value>
+  </data>
   <data name="ZipCode" xml:space="preserve">
     <value>رقم المنطقة البريدية</value>
   </data>
