--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -330,4 +330,7 @@
   <data name="ZipCodeRequiredErrorMessage" xml:space="preserve">
     <value>Please enter your zip code.</value>
   </data>
+  <data name="Welcome" xml:space="preserve">
+    <value>Welcome!</value>
+  </data>
 </root>
