--- a/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
@@ -174,6 +174,9 @@
   <data name="CurrentPasswordValidationMessage" xml:space="preserve">
     <value>الرجاء إدخال كلمة مرورك الحالية.</value>
   </data>
+  <data name="EditAccount" xml:space="preserve">
+    <value>تعديل الحساب</value>
+  </data>
   <data name="Email" xml:space="preserve">
     <value>عنوان البريد الإلكتروني</value>
   </data>
