--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -357,4 +357,13 @@
   <data name="EditAccount" xml:space="preserve">
     <value>Edit Account</value>
   </data>
+  <data name="EditAccountNameSuccessMessage" xml:space="preserve">
+    <value>your information has been saved successfully.</value>
+  </data>
+  <data name="EditAccountNameAndEmailSuccessMessage" xml:space="preserve">
+    <value>your information has been saved successfully .please login to load your profile</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Save</value>
+  </data>
 </root>
