MZ-27 Add CategoryNotification Entity With DB Migration Add NotificationService Add UserController.Notifications() With View Move ~/Area/admin/Products/Views/ProductCategories.cshtml  to ~/Views/Shared. Change Product Edit View to Call ~/Area/admin/Products/Views/ProductCategories.cshtml And send the model

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -366,4 +366,13 @@
   <data name="Kuwait" xml:space="preserve">
     <value>Kuwait</value>
   </data>
+  <data name="Categories" xml:space="preserve">
+    <value>Categories</value>
+  </data>
+  <data name="CategoryNotification" xml:space="preserve">
+    <value>Category Notification</value>
+  </data>
+  <data name="CategoryNotificationSaveMessage" xml:space="preserve">
+    <value>Thank you, your notifications have been saved.</value>
+  </data>
 </root>
