MZ-27 Add Javascript Conditions
If a parent category is checked automatically check all child categories.
If a parent category is unchecked automatically uncheck all child categories.
If all child categories get checked manually, automatically check the parent category.

--- a/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
@@ -141,6 +141,12 @@
   <data name="BuildingRequiredErrorMessage" xml:space="preserve">
     <value>الرجاء إدخال رقم المبنى.</value>
   </data>
+  <data name="CategoryNotification" xml:space="preserve">
+    <value>تنبيهات التصنيفات</value>
+  </data>
+  <data name="CategoryNotificationSaveMessage" xml:space="preserve">
+    <value>تم تعديل التنبيهات الخاص بك بنجاح . شكرا لك</value>
+  </data>
   <data name="ChangeLanguage" xml:space="preserve">
     <value>تغيير اللغة</value>
   </data>
