MZ-27 renamed resource "Category Notication" to "Notifications"

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -369,8 +369,8 @@
   <data name="Categories" xml:space="preserve">
     <value>Categories</value>
   </data>
-  <data name="CategoryNotification" xml:space="preserve">
-    <value>Category Notification</value>
+  <data name="Notifications" xml:space="preserve">
+    <value>Notifications</value>
   </data>
   <data name="CategoryNotificationSaveMessage" xml:space="preserve">
     <value>Thank you, your notifications have been saved.</value>
