MZ-61 added form "submit-once" javascript

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -489,4 +489,7 @@
   <data name="Shipping" xml:space="preserve">
     <value>Shipping</value>
   </data>
+  <data name="SubmittingPleaseWait" xml:space="preserve">
+    <value>Submitting, please wait...</value>
+  </data>
 </root>
