--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -481,10 +481,10 @@
     <value>Wishlist item added successfully.</value>
   </data>
   <data name="WishListItemDeleteConfirmation" xml:space="preserve">
-    <value>are you sure you want to delete this item from your wishlist?</value>
+    <value>Are you sure you want to permanently remove this item from your wishlist?</value>
   </data>
   <data name="WishListItemRemoveMessage" xml:space="preserve">
-    <value>item has been removed from your wishlist successfully.</value>
+    <value>Item successfully removed.</value>
   </data>
   <data name="Shipping" xml:space="preserve">
     <value>Shipping</value>
